fjord-compiler/test/errors/uniqueness/ModifySharedRecord.fj
module test.ModifySharedRecord


record Shared 
  sharedInt : Int


illegalMutation : Shared -> Shared
illegalMutation a =
  { a | sharedInt = 3 }
